--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,8 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(245,245,245);
-}
-
-.container {
-  margin: 80px auto 0;
-  max-width: 1200px;
-}
-
-.nav-container {
-  margin: auto;
+  margin: 0;
+  padding: 0;
 }
 
 a {
